[metadata]
description-file = "README.rst"
license_file = "LICENSE"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .pytest_cache
)/
'''

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "numpy"
match = 'susi/*'
